[tool.poetry]
name = "tennis"
version = "0.1.0"
description = ""
authors = ["JaimeOnaindia <jaime.onaindiaproyectos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-ninja = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
